--- a/main_app/templates/starwarscards/index.html
+++ b/main_app/templates/starwarscards/index.html
@@ -4,12 +4,15 @@
 <br>
 {% for sw_card in starwarscards %}
   <div class="card">
-    <div class="card-content">
-      <span class="card-title">{{ sw_card.caption }}</span>
-      <p>Series: {{ sw_card.series }}</p>
-      <p>Number: {{ sw_card.number }}</p>
-      <p>Condition: {{ sw_card.condition }}</p>
-    </div>
+    <a href="{% url 'detail' sw_card.id %}">
+      <div class="card-content">
+        <span class="card-title">{{ sw_card.caption }}</span>
+        <p>Series: {{ sw_card.get_series_type_display }}</p>
+        <p>Number: {{ sw_card.card_number }}</p>
+        <p>Condition: {{ sw_card.get_condition_type_display }}</p>
+        <p>Description: {{ sw_card.description|linebreaks }}</p>
+      </div>
+    </a>
   </div>
 {% endfor %}
 {% endblock %}
