adds one-to-many and many-to-many relationships. Adds photos.

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -22,21 +22,11 @@
           </li>
         </ul>
         <ul class="right">
-          <li>
-            <a href="{% url 'starwarscards_index' %}">
-              All Cards
-            </a>
-          </li>
-          <li>
-            <a href="{% url 'starwarscards_create' %}">
-              Add Card
-            </a>
-          </li>
-          <li>
-            <a href="{% url 'about' %}">
-              About
-            </a>
-          </li>
+          <li><a href="{% url 'starwarscards_index' %}">All Cards</a></li>
+          <li><a href="{% url 'starwarscards_create' %}">Add Card</a></li>
+          <li><a href="{% url 'characters_create' %}">Add Character</a></li>
+          <li><a href="{% url 'characters_index' %}">All Characters</a></li>
+          <li><a href="{% url 'about' %}">About</a></li>
         </ul>
       </div>
       </nav>
