--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -22,16 +22,27 @@
           </li>
         </ul>
         <ul class="right">
-          <li><a href="{% url 'starwarscards_index' %}">All Cards</a></li>
-          <li><a href="{% url 'starwarscards_create' %}">Add Card</a></li>
-          <li><a href="{% url 'characters_create' %}">Add Character</a></li>
-          <li><a href="{% url 'characters_index' %}">All Characters</a></li>
+          {% if user.is_authenticated %}
+            <li><a href="{% url 'starwarscards_index' %}">All Cards</a></li>
+            <li><a href="{% url 'starwarscards_create' %}">Add Card</a></li>
+            <li><a href="{% url 'characters_index' %}">All Characters</a></li>
+            <li><a href="{% url 'characters_create' %}">Add Character</a></li>
+            <li><a href="{% url 'logout' %}">Log Out</a></li>
+          {% else %}
+            <li><a href="{% url 'signup' %}">Sign Up</a></li>
+            <li><a href="{% url 'login' %}">Log In</a></li>
+          {% endif %}
           <li><a href="{% url 'about' %}">About</a></li>
         </ul>
       </div>
       </nav>
   </header>
-  <p class="indigo darken-2 white-text center-align tag-line">May the force be with you!</p>
+  <p class="indigo darken-2 white-text center-align tag-line">
+    May the force be with you!
+  {% if user.is_authenticated %}
+    <span class="right">Logged In User: {{ user.username }}&nbsp;&nbsp;</span>
+  {% endif %}
+  </p>
   <main class="container">
     {% block content %}
     {% endblock %}
